# clipmanager_rs

./: .gitignore  Cargo.toml  README.md
migrations/sqlite/: down.sql  up.sql
src/: clip_db.rs  gui.rs  gui_helpers.rs  iced_gui.rs  main.rs
src/clip_db/: schema.rs
src/gui/: gui_helpers.rs  toast.rs
src/iced_gui/: gui_helpers.rs  toast.rs
