[package]
name = "clipmanager_rs"
version = "0.1.0"
edition = "2021"



[dependencies]
clap = { version = "4", features = ["derive"] }
iced = "0.9"
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = { version="2", features=["sqlite"]}
log = "0.4"
iced_native = "0.10"
env_logger = "0.10.0"
home = "0.5.5"

